Add Application properties file

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=Bibliotech
+
+spring.datasource.url=${DB_URI:jdbc:postgresql://localhost:5432/mydb?connectTimeout=5&socketTimeout=30}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.hikari.pool-name=HikariBibliotech
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=400000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.keepalive-time=300000
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.servlet.path=${BASE_PATH:/api/v1}
