--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,4 +17,9 @@ spring.datasource.hikari.keepalive-time=300000
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 spring.mvc.servlet.path=${BASE_PATH:/api/v1}
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
