--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -99,6 +99,12 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.21</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
