--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
 spring.mvc.servlet.path=${BASE_PATH:/api/v1}
 
 logging.level.org.springframework.security=DEBUG
